<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.character.ChangeHouseFragment"
    android:background="@color/dark_jungle_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/change_house_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change House"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_house_title_tv">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/for_text"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/change_house_character_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:text="Harry Potter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/current_house"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/change_house_current_house_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:text="Gryffindor" />

            <TextView
                android:id="@+id/change_house_hint_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/click_to_select_the_new_house_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="2"
                android:rowCount="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_change_house_gryffindor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/gryffindor_red"
                    android:text="@string/gryffindor_house_text"
                    android:textColor="@color/gryffindor_yellow"
                    android:textSize="20sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/lion_icon"
                    app:iconGravity="textTop"
                    app:iconSize="100dp"
                    app:iconTint="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_change_house_slytherin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/slytherin_green"
                    android:text="@string/slytherin_house_text"
                    android:textColor="@color/slytherin_light_silver"
                    android:textSize="20sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/snake_icon"
                    app:iconGravity="textTop"
                    app:iconSize="100dp"
                    app:iconTint="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_change_house_hufflepuff"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/hufflepuff_canary"
                    android:text="@string/hufflepuff_house_text"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/badger_icon"
                    app:iconGravity="textTop"
                    app:iconSize="100dp"
                    app:iconTint="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_change_house_ravenclaw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/ravenclaw_dark_blue"
                    android:text="@string/ravenclaw_house_text"
                    android:textColor="@color/ravenclaw_gray"
                    android:textSize="20sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/raven_icon"
                    app:iconGravity="textTop"
                    app:iconSize="100dp"
                    app:iconTint="@color/white" />


            </GridLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_back_change_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/back_text"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>