<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_jungle_green"
    tools:context=".ui.character.TeachNewSpellsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/change_house_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/learn_a_new_spell"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/teach_new_spell_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_house_title_tv">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/for_text"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/teach_spell_character_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:text="Harry Potter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="Random spell: "
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/teach_new_spell_random_spell_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:background="@drawable/rounded_background"
                    android:backgroundTint="@color/slytherin_light_silver"
                    android:paddingVertical="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    tools:text="CRUCIO" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_new_random_spell"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/gryffindor_red"
                    android:contentDescription="@string/random_spell_button"
                    app:icon="@drawable/random_icon"
                    app:iconGravity="end"
                    app:iconSize="50dp"
                    app:iconTint="@color/gryffindor_yellow" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_spell_to_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:backgroundTint="@color/gryffindor_red"
                android:text="@string/add_spell_to_list_for_learn"
                android:textSize="20sp"
                app:icon="@drawable/plus_icon"
                app:iconGravity="end"
                app:iconSize="40dp"
                app:iconTint="@color/gryffindor_yellow" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/teach_new_spell_list_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel_teach_new_spell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/gryffindor_red"
            android:paddingVertical="15dp"
            android:text="@string/cancel_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_teach_new_spell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/slytherin_light_silver"
            android:paddingVertical="15dp"
            android:text="@string/learn_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>